--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "bn.js": "4.11.6",
-    "elliptic": "6.3.2"
+    "elliptic": "6.3.2",
+    "json-loader": "^0.5.4"
   },
   "optionalDependencies": {
     "bcoin-native": "0.0.9",
@@ -61,21 +62,11 @@
     "uglify-js": "2.7.3"
   },
   "browser": {
-    "./lib/http/base": "./browser/empty.js",
-    "./lib/http/client": "./browser/empty.js",
-    "./lib/http/request": "./browser/empty.js",
-    "./lib/http/rpcclient": "./browser/empty.js",
-    "./lib/http/server": "./browser/empty.js",
-    "./lib/http/wallet": "./browser/empty.js",
-    "fs": "./browser/empty.js",
-    "crypto": "./browser/empty.js",
-    "child_process": "./browser/empty.js",
-    "os": "./browser/empty.js",
-    "net": "./browser/empty.js",
-    "bcoin-native": "./browser/empty.js",
-    "secp256k1": "./browser/empty.js"
   },
   "browserify": {
-    "transform": ["./browser/transform.js", "babelify"]
+    "transform": [
+      "./browser/transform.js",
+      "babelify"
+    ]
   }
 }
