--- a/package.json
+++ b/package.json
@@ -63,24 +63,25 @@
     "lint": "jshint lib/ || exit 0"
   },
   "browser": {
-    "./lib/blockchain/layout.js": "./lib/blockchain/layout-browser.js",
-    "./lib/crypto/backend.js": "./lib/crypto/backend-browser.js",
-    "./lib/crypto/ec.js": "./lib/crypto/ec-elliptic.js",
-    "./lib/crypto/pk.js": "./lib/crypto/pk-browser.js",
-    "./lib/db/backends.js": "./lib/db/backends-browser.js",
-    "./lib/hd/wordlist.js": "./lib/hd/wordlist-browser.js",
     "./lib/http/base.js": "./browser/empty.js",
     "./lib/http/client.js": "./browser/empty.js",
     "./lib/http/request.js": "./browser/empty.js",
     "./lib/http/rpcclient.js": "./browser/empty.js",
     "./lib/http/server.js": "./browser/empty.js",
     "./lib/http/wallet.js": "./browser/empty.js",
-    "./lib/net/dns.js": "./lib/net/dns-browser.js",
-    "./lib/net/tcp.js": "./lib/net/tcp-browser.js",
+    "./lib/utils/lazy.js": "./browser/empty.js",
     "./lib/utils/native.js": "./browser/empty.js",
     "./lib/utils/nfkd.js": "./lib/utils/nfkd-browser.js",
     "./lib/utils/nexttick.js": "./lib/utils/nexttick-browser.js",
     "./lib/utils/lazy.js": "./lib/utils/lazy-browser.js",
+    "./lib/crypto/backend.js": "./lib/crypto/backend-browser.js",
+    "./lib/crypto/ec.js": "./lib/crypto/ec-elliptic.js",
+    "./lib/crypto/pk.js": "./lib/crypto/pk-browser.js",
+    "./lib/db/backends.js": "./lib/db/backends-browser.js",
+    "./lib/hd/wordlist.js": "./lib/hd/wordlist-browser.js",
+    "./lib/net/tcp.js": "./lib/net/tcp-browser.js",
+    "./lib/net/dns.js": "./lib/net/dns-browser.js",
+    "./lib/blockchain/layout.js": "./lib/blockchain/layout-browser.js",
     "./lib/wallet/layout.js": "./lib/wallet/layout-browser.js",
     "bcoin-native.js": "./browser/empty.js",
     "./lib/hd/README.md": "./browser/empty.js",
