--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "./lib/http/rpcclient.js": "./browser/empty.js",
     "./lib/http/server.js": "./browser/empty.js",
     "./lib/http/wallet.js": "./browser/empty.js",
+    "./lib/utils/lazy.js": "./browser/empty.js",
     "./lib/utils/native.js": "./browser/empty.js",
     "./lib/utils/nfkd.js": "./lib/utils/nfkd-browser.js",
     "./lib/utils/nexttick.js": "./lib/utils/nexttick-browser.js",
@@ -77,6 +78,7 @@
     "./lib/db/backends.js": "./lib/db/backends-browser.js",
     "./lib/hd/wordlist.js": "./lib/hd/wordlist-browser.js",
     "./lib/net/tcp.js": "./lib/net/tcp-browser.js",
+    "./lib/net/dns.js": "./lib/net/dns-browser.js",
     "./lib/blockchain/layout.js": "./lib/blockchain/layout-browser.js",
     "./lib/wallet/layout.js": "./lib/wallet/layout-browser.js",
     "./lib/hd/README.md": "./browser/empty.js",
