--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "./lib/crypto/pk.js": "./lib/crypto/pk-browser.js",
     "./lib/db/backends.js": "./lib/db/backends-browser.js",
     "./lib/hd/wordlist.js": "./lib/hd/wordlist-browser.js",
-    "./lib/net/tcp.js": "./lib/net/tcp-browser.js",
-    "./lib/net/dns.js": "./lib/net/dns-browser.js",
+    "./lib/net/tcp.js": "./lib/net/tcp.js",
+    "./lib/net/dns.js": "./lib/net/dns.js",
     "./lib/blockchain/layout.js": "./lib/blockchain/layout-browser.js",
     "./lib/wallet/layout.js": "./lib/wallet/layout-browser.js",
     "bcoin-native.js": "./browser/empty.js",
