--- a/package.json
+++ b/package.json
@@ -2,37 +2,22 @@
   "name": "bcoin",
   "version": "1.0.0-alpha",
   "description": "Bitcoin bike-shed",
-  "main": "./lib/bcoin.js",
-  "bin": {
-    "bcoin-node": "./bin/node",
-    "bcoin-spvnode": "./bin/spvnode",
-    "bcoin-cli": "./bin/cli",
-    "bcoin": "./bin/bcoin"
-  },
-  "preferGlobal": true,
-  "scripts": {
-    "test": "mocha --reporter spec test/*-test.js",
-    "browserify": "browserify --im -o browser/bcoin.js lib/bcoin.js && browserify --im -o browser/bcoin-master.js lib/workers/master.js",
-    "uglify": "uglifyjs -m -o browser/bcoin.min.js browser/bcoin.js && uglifyjs -m -o browser/bcoin-master.min.js browser/bcoin-master.js",
-    "clean": "rm browser/bcoin.js browser/bcoin.min.js browser/bcoin-master.js browser/bcoin-master.min.js",
-    "lint": "jshint lib/ || exit 0"
-  },
+  "license": "MIT",
   "repository": "git://github.com/bcoin-org/bcoin.git",
+  "homepage": "https://github.com/bcoin-org/bcoin",
+  "bugs": {
+    "url": "https://github.com/bcoin-org/bcoin/issues"
+  },
+  "author": "Fedor Indutny <fedor@indutny.com>",
+  "contributors": [
+    "Christopher Jeffrey <chjjeffrey@gmail.com> (https://github.com/chjj)"
+  ],
   "keywords": [
     "bcoin",
     "bitcoin",
     "blockchain",
     "wallet"
   ],
-  "author": "Fedor Indutny <fedor@indutny.com>",
-  "contributors": [
-    "Christopher Jeffrey <chjjeffrey@gmail.com> (https://github.com/chjj)"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bcoin-org/bcoin/issues"
-  },
-  "homepage": "https://github.com/bcoin-org/bcoin",
   "engines": {
     "node": ">= 0.11.0"
   },
@@ -61,34 +46,48 @@
     "mocha": "3.0.2",
     "uglify-js": "2.7.3"
   },
+  "main": "./lib/bcoin.js",
+  "preferGlobal": true,
+  "bin": {
+    "bcoin-node": "./bin/node",
+    "bcoin-spvnode": "./bin/spvnode",
+    "bcoin-cli": "./bin/cli",
+    "bcoin": "./bin/bcoin"
+  },
+  "scripts": {
+    "test": "mocha --reporter spec test/*-test.js",
+    "browserify": "browserify --im -o browser/bcoin.js lib/bcoin.js && browserify --im -o browser/bcoin-master.js lib/workers/master.js",
+    "uglify": "uglifyjs -m -o browser/bcoin.min.js browser/bcoin.js && uglifyjs -m -o browser/bcoin-master.min.js browser/bcoin-master.js",
+    "clean": "rm browser/bcoin.js browser/bcoin.min.js browser/bcoin-master.js browser/bcoin-master.min.js",
+    "lint": "jshint lib/ || exit 0"
+  },
   "browser": {
+    "./lib/blockchain/layout.js": "./lib/blockchain/layout-browser.js",
+    "./lib/crypto/backend.js": "./lib/crypto/backend-browser.js",
+    "./lib/crypto/ec.js": "./lib/crypto/ec-elliptic.js",
+    "./lib/crypto/pk.js": "./lib/crypto/pk-browser.js",
+    "./lib/db/backends.js": "./lib/db/backends-browser.js",
+    "./lib/hd/wordlist.js": "./lib/hd/wordlist-browser.js",
     "./lib/http/base.js": "./browser/empty.js",
     "./lib/http/client.js": "./browser/empty.js",
     "./lib/http/request.js": "./browser/empty.js",
     "./lib/http/rpcclient.js": "./browser/empty.js",
     "./lib/http/server.js": "./browser/empty.js",
     "./lib/http/wallet.js": "./browser/empty.js",
-    "./lib/utils/lazy.js": "./browser/empty.js",
+    "./lib/net/dns.js": "./lib/net/dns-browser.js",
+    "./lib/net/tcp.js": "./lib/net/tcp-browser.js",
     "./lib/utils/native.js": "./browser/empty.js",
     "./lib/utils/nfkd.js": "./lib/utils/nfkd-browser.js",
     "./lib/utils/nexttick.js": "./lib/utils/nexttick-browser.js",
     "./lib/utils/lazy.js": "./lib/utils/lazy-browser.js",
-    "./lib/crypto/backend.js": "./lib/crypto/backend-browser.js",
-    "./lib/crypto/ec.js": "./lib/crypto/ec-elliptic.js",
-    "./lib/crypto/pk.js": "./lib/crypto/pk-browser.js",
-    "./lib/db/backends.js": "./lib/db/backends-browser.js",
-    "./lib/hd/wordlist.js": "./lib/hd/wordlist-browser.js",
-    "./lib/net/tcp.js": "./lib/net/tcp-browser.js",
-    "./lib/net/dns.js": "./lib/net/dns-browser.js",
-    "./lib/blockchain/layout.js": "./lib/blockchain/layout-browser.js",
     "./lib/wallet/layout.js": "./lib/wallet/layout-browser.js",
+    "bcoin-native.js": "./browser/empty.js",
     "./lib/hd/README.md": "./browser/empty.js",
-    "fs": "./browser/empty.js",
-    "crypto": "./browser/empty.js",
     "child_process": "./browser/empty.js",
-    "os": "./browser/empty.js",
+    "crypto": "./browser/empty.js",
+    "fs": "./browser/empty.js",
     "net": "./browser/empty.js",
-    "bcoin-native": "./browser/empty.js",
+    "os": "./browser/empty.js",
     "secp256k1": "./browser/empty.js"
   },
   "browserify": {
