--- a/package.json
+++ b/package.json
@@ -63,30 +63,31 @@
     "lint": "jshint lib/ || exit 0"
   },
   "browser": {
-    "./lib/blockchain/layout": "./lib/blockchain/layout-browser.js",
-    "./lib/crypto/backend": "./lib/crypto/backend-browser.js",
-    "./lib/crypto/ec": "./lib/crypto/ec-elliptic.js",
-    "./lib/crypto/pk": "./lib/crypto/pk-browser.js",
-    "./lib/db/backends": "./lib/db/backends-browser.js",
-    "./lib/hd/wordlist": "./lib/hd/wordlist-browser.js",
-    "./lib/http/base": "./browser/empty.js",
-    "./lib/http/client": "./browser/empty.js",
-    "./lib/http/request": "./browser/empty.js",
-    "./lib/http/rpcclient": "./browser/empty.js",
-    "./lib/http/server": "./browser/empty.js",
-    "./lib/http/wallet": "./browser/empty.js",
-    "./lib/net/dns": "./lib/net/dns-browser.js",
-    "./lib/net/tcp": "./lib/net/tcp-browser.js",
-    "./lib/utils/native": "./browser/empty.js",
-    "./lib/utils/nfkd": "./lib/utils/nfkd-browser.js",
-    "./lib/utils/nexttick": "./lib/utils/nexttick-browser.js",
-    "./lib/utils/lazy": "./lib/utils/lazy-browser.js",
-    "./lib/wallet/layout": "./lib/wallet/layout-browser.js",
+    "./lib/http/base.js": "./browser/empty.js",
+    "./lib/http/client.js": "./browser/empty.js",
+    "./lib/http/request.js": "./browser/empty.js",
+    "./lib/http/rpcclient.js": "./browser/empty.js",
+    "./lib/http/server.js": "./browser/empty.js",
+    "./lib/http/wallet.js": "./browser/empty.js",
+    "./lib/utils/native.js": "./browser/empty.js",
+    "./lib/utils/nfkd.js": "./lib/utils/nfkd-browser.js",
+    "./lib/utils/nexttick.js": "./lib/utils/nexttick-browser.js",
+    "./lib/utils/lazy.js": "./lib/utils/lazy-browser.js",
+    "./lib/crypto/backend.js": "./lib/crypto/backend-browser.js",
+    "./lib/crypto/ec.js": "./lib/crypto/ec-elliptic.js",
+    "./lib/crypto/pk.js": "./lib/crypto/pk-browser.js",
+    "./lib/db/backends.js": "./lib/db/backends-browser.js",
+    "./lib/hd/wordlist.js": "./lib/hd/wordlist-browser.js",
+    "./lib/net/tcp.js": "./lib/net/tcp.js",
+    "./lib/net/dns.js": "./lib/net/dns.js",
+    "./lib/blockchain/layout.js": "./lib/blockchain/layout-browser.js",
+    "./lib/wallet/layout.js": "./lib/wallet/layout-browser.js",
     "bcoin-native": "./browser/empty.js",
+    "./lib/hd/README.md": "./browser/empty.js",
     "child_process": "./browser/empty.js",
     "crypto": "./browser/empty.js",
     "fs": "./browser/empty.js",
-    "net": "./browser/empty.js",
+    "net": "cordova-chrome-net",
     "os": "./browser/empty.js",
     "secp256k1": "./browser/empty.js"
   },
